--- a/web/style/styles.css
+++ b/web/style/styles.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+    scroll-behavior: smooth;
     max-width: 100vw;
     overflow: hidden auto;
     min-height: 100%;
@@ -11,6 +12,7 @@ body {
 
 .page {
     /* min-height: calc(100vh - 60px); */
+    min-height: 100vh;
     font-family: 'Plus Jakarta Sans', sans-serif;
     max-width: 100%;
     overflow: hidden auto;
