--- a/web/templates/contact-form.html
+++ b/web/templates/contact-form.html
@@ -22,7 +22,7 @@
         })
     })
 </script>
-<div class="bg-indigo-900 text-stone-50 pt-4 py-6 rounded-t-lg">
+<div class="bg-indigo-900 text-stone-50 pt-4 py-6 rounded-t-lg" id="formulario-contacto">
     <div class="flex px-4">
         <div class="space-y-4">
             <h1 class="text-3xl">Solicitar contacto</h1>
